refac: change JwtToken name to TokenData
