# backend/src/main/java/com/ericbs/backend/user/JwtTokenController.java
@@ -1,7 +1,7 @@
 package com.ericbs.backend.user;
 
 import com.ericbs.backend.common.dtos.GenericErrorDTO;
-import com.ericbs.backend.user.dtos.JwtTokenDTO;
+import com.ericbs.backend.user.dtos.TokenDataDTO;
 import com.ericbs.backend.user.dtos.LoginRequestDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -17,7 +17,7 @@ public class JwtTokenController {
     // In this case, because refresh tokens haven't been explained in the lecture, the access token
     // will serve both as a refresh token and an access token.
     @PutMapping("/user/token")
-    public ResponseEntity<Object> refreshSession(@RequestBody JwtTokenDTO jwtToken) {
+    public ResponseEntity<Object> refreshSession(@RequestBody TokenDataDTO data) {
         return ResponseEntity.status(501).body(new GenericErrorDTO("Not implemented yet."));
     }
 }
