# backend/src/main/java/com/ericbs/backend/user/dtos/JwtTokenDTO.java
@@ -1,3 +1,0 @@
-package com.ericbs.backend.user.dtos;
-
-public record JwtTokenDTO(String userId, String jwtToken) {}
