# backend/src/main/java/com/ericbs/backend/user/dtos/TokenDataDTO.java
@@ -1,0 +1,3 @@
+package com.ericbs.backend.user.dtos;
+
+public record TokenDataDTO(String userId, String jwtToken) {}
